# commonapi_cpp_examples

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  manage.ps1  pyproject.toml  readme.rst
.devcontainer/: DockerFile  compose.yaml  devcontainer.json
.devcontainer/.other/fluxbox/: init  menu  startup
.github/workflows/: full-development.yml  full-production.yml  full-staging.yml  reusable-full.yml
doc/: conf.py  doxyfile  index.rst
doc/app/: client.rst  index.rst  server.rst  startup.rst
doc/tests/: index.rst
doc/utils/: capi.rst  error.rst  index.rst  version.rst  versioning.rst
doc/version/: index.rst
other/cmake/: gnu_toolchain.cmake  tag.cmake  utils.cmake  version.cmake  versioning.cmake
other/cmake/preload/: debug.cmake  release.cmake
other/commonapi_docs/someip/: vsomeipUserGuide.html
other/cppcheck/: suppressions.xml
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/client/: CMakeLists.txt  client.cpp
src/app/client/inc/app/client/: client.hpp
src/app/inc/app/: app.hpp
src/app/server/: CMakeLists.txt  server.cpp
src/app/server/inc/app/server/: server.hpp
src/app/startup/: CMakeLists.txt  startup.cpp
src/app/startup/inc/app/startup/: startup.hpp
src/utils/: CMakeLists.txt
src/utils/capi/: CMakeLists.txt  runtime.cpp
src/utils/capi/inc/utils/capi/: capi.hpp
src/utils/capi/inc/utils/capi/priv/: client.hpp  runtime.hpp  server.hpp
src/utils/error/: CMakeLists.txt
src/utils/error/inc/utils/error/: error.hpp
src/utils/inc/utils/: utils.hpp
src/utils/version/: CMakeLists.txt
src/utils/version/inc/utils/version/: version.hpp
src/utils/versioning/: CMakeLists.txt
src/utils/versioning/inc/utils/versioning/: versioning.hpp
tests/: CMakeLists.txt
tests/googletest/: CMakeLists.txt
tests/tests/: CMakeLists.txt
tests/tests/.test_utils/: googletest.cpp  test_utils.cpp
tests/tests/.test_utils/inc/test_utils/: test_utils.hpp
tests/tests/.test_utils/inc/test_utils/priv/: googletest.hpp
tests/tests/lapp/: CMakeLists.txt  test_lapp.cpp  test_lapp.hpp
tests/tests/lapp_cstartup/: CMakeLists.txt  test_lapp_cstartup.cpp  test_lapp_cstartup.hpp
tests/tests/startup/: CMakeLists.txt  test_startup.cpp
tests/tests/test_utils/: googletest.cpp  test_utils.cpp
tests/tests/test_utils/inc/test_utils/: test_utils.hpp
tests/tests/test_utils/inc/test_utils/priv/: googletest.hpp
